--- a/src/Particular.ThroughputCollector.UnitTests/Particular.ThroughputCollector.UnitTests.csproj
+++ b/src/Particular.ThroughputCollector.UnitTests/Particular.ThroughputCollector.UnitTests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="throughput-report-v1.0.json" />
+    <None Remove="ThroughputCollector\throughput-report-v1.0.json" />
     <None Remove="ThroughputCollector\throughput-report-v2.0.json" />
   </ItemGroup>
 
