--- a/src/Particular.ThroughputCollector.UnitTests/Particular.ThroughputCollector.UnitTests.csproj
+++ b/src/Particular.ThroughputCollector.UnitTests/Particular.ThroughputCollector.UnitTests.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="GitHubActionsTestLogger" />
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
