Add an initial (and failing) version of an Approval test for the Monitoring connection details.

--- a/src/ServiceControl.Monitoring.AcceptanceTests/ServiceControl.Monitoring.AcceptanceTests.csproj
+++ b/src/ServiceControl.Monitoring.AcceptanceTests/ServiceControl.Monitoring.AcceptanceTests.csproj
@@ -21,6 +21,11 @@
     <PackageReference Include="NServiceBus.Metrics.ServiceControl" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
+    <PackageReference Include="Particular.Approvals" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ApprovalFiles\" />
   </ItemGroup>
 
 </Project>
