--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -145,7 +145,8 @@ jobs:
           $serviceControlMetadata | ConvertTo-Json | Out-File -Path ServiceControlMetadata.json
       - name: Deploy
         if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
-        uses: Particular/push-octopus-package-action@v1.1.0
+        # Does not follow standard practice of targeting explicit versions because configuration is tightly coupled to Octopus Deploy configuration
+        uses: Particular/push-octopus-package-action@main
         with:
           octopus-deploy-api-key: ${{ secrets.OCTOPUS_DEPLOY_API_KEY }}
           additional-metadata-paths: ServiceControlMetadata.json
