--- a/src/ServiceControl.Audit/ServiceControl.Audit.csproj
+++ b/src/ServiceControl.Audit/ServiceControl.Audit.csproj
@@ -34,6 +34,10 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" />
   </ItemGroup>
 
+   <ItemGroup>
+    <Compile Include="..\ServiceControl.SagaAudit\**\*.cs" Exclude="..\ServiceControl.SagaAudit\obj\**\*" LinkBase="SagaAudit" />
+  </ItemGroup>
+
   <ItemGroup>
     <None Remove="Infrastructure\Hosting\Help.txt" />
     <EmbeddedResource Include="Infrastructure\Hosting\Help.txt" />
@@ -46,11 +50,6 @@
 
   <ItemGroup>
     <Artifact Include="$(OutputPath)" FileExclude="ServiceControl.Audit.dll.config" DirExclude=".logs" DestinationFolder="$(ArtifactsPath)Particular.ServiceControl.Audit" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="..\ServiceControl.SagaAudit\Messages\*.cs" LinkBase="SagaAudit\Messages" />
-    <Compile Include="..\ServiceControl.SagaAudit\*.cs" LinkBase="SagaAudit" />
   </ItemGroup>
 
 </Project>
