--- a/src/Custom.Build.props
+++ b/src/Custom.Build.props
@@ -7,6 +7,7 @@
     <EnableDefaultArtifacts>false</EnableDefaultArtifacts>
     <!-- Remove after upgrading to NServiceBus 8.x -->
     <ParticularAnalyzersVersion>0.9.0</ParticularAnalyzersVersion>
+    <NuGetAuditMode>all</NuGetAuditMode>
   </PropertyGroup>
 
   <PropertyGroup>
