--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -79,12 +79,19 @@
   </ItemGroup>
 
   <ItemGroup Label="Versions to pin transitive references">
+    <!-- Referenced by OWIN but not actuall part of any deployment -->
+    <PackageVersion Include="jQuery" Version="3.7.1" />
+    <PackageVersion Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.35.0" />
     <PackageVersion Include="Microsoft.Owin.Hosting" Version="4.2.2" />
+    <PackageVersion Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" />
     <PackageVersion Include="NServiceBus.Newtonsoft.Json" Version="2.4.0" />
+    <PackageVersion Include="SharpZipLib" Version="1.4.2" />
     <PackageVersion Include="System.Collections.Immutable" Version="7.0.0" />
     <PackageVersion Include="System.Diagnostics.DiagnosticSource" Version="7.0.2" />
+    <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
     <PackageVersion Include="System.Memory" Version="4.5.5" />
     <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+    <PackageVersion Include="System.Security.Cryptography.Pkcs" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup Label="Must not be changed to prevent breaking cmdlets in PowerShell 7.2 LTS">
