--- a/src/ServiceControl.Infrastructure/ServiceControl.Infrastructure.csproj
+++ b/src/ServiceControl.Infrastructure/ServiceControl.Infrastructure.csproj
@@ -5,8 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../ServiceControl.Configuration/ServiceControl.Configuration.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="NServiceBus" />
+    <PackageReference Include="NServiceBus.Extensions.Logging" />
+    <PackageReference Include="NLog.Extensions.Logging" />
   </ItemGroup>
 
 </Project>
