--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -134,3 +134,49 @@ jobs:
         uses: Particular/push-octopus-package-action@main
         with:
           octopus-deploy-api-key: ${{ secrets.OCTOPUS_DEPLOY_API_KEY }}
+  containers:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    runs-on: ubuntu-22.04
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      matrix:
+        include:
+          - name: servicecontrol
+            project: ServiceControl
+          - name: servicecontrol-audit
+            project: ServiceControl.Audit
+          - name: servicecontrol-monitoring
+            project: ServiceControl.Monitoring
+    steps:
+      - name: Check for secrets
+        env:
+          SECRETS_AVAILABLE: ${{ secrets.SECRETS_AVAILABLE }}
+        shell: pwsh
+        run: exit $(If ($env:SECRETS_AVAILABLE -eq 'true') { 0 } Else { 1 })
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
+      - name: Checkout
+        uses: actions/checkout@v4.1.6
+        with:
+          fetch-depth: 0
+      - name: Install MinVer CLI
+        run: dotnet tool install --global minver-cli --version 5.0.0
+      - name: Determine versions
+        run: |
+          MinVerVersion=$(minver)
+          echo "MinVerVersion=$MinVerVersion" >> $GITHUB_ENV
+      - name: Build image
+        run: docker build --tag ${{ matrix.name }} --file src/${{ matrix.project }}/Dockerfile .
+      - name: Log in to registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Push image
+        run: |
+          IMAGE_NAME=${{ matrix.name }}
+          VERSION=${{ env.MinVerVersion }}
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
+          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
