--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,10 +83,11 @@ jobs:
           connection-string-name: ServiceControl_TransportTests_RabbitMQ_ConnectionString
           tag: ServiceControl
       - name: Setup Azure Service Bus
-        uses: Particular/setup-azureservicebus-action@v1.3.0
+        uses: Particular/setup-azureservicebus-action@v2.0.0
         if: matrix.test-category == 'AzureServiceBus'
         with:
           connection-string-name: ServiceControl_TransportTests_ASBS_ConnectionString
+          azure-credentials: ${{ secrets.AZURE_ACI_CREDENTIALS }}
           tag: ServiceControl
       - name: Setup Azure Storage Queues
         uses: Particular/setup-azurestorage-action@v1.2.1
