--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,10 +90,11 @@ jobs:
           azure-credentials: ${{ secrets.AZURE_ACI_CREDENTIALS }}
           tag: ServiceControl
       - name: Setup Azure Storage Queues
-        uses: Particular/setup-azurestorage-action@v1.2.1
+        uses: Particular/setup-azurestorage-action@v2.0.0
         if: matrix.test-category == 'AzureStorageQueues'
         with:
           connection-string-name: ServiceControl_TransportTests_ASQ_ConnectionString
+          azure-credentials: ${{ secrets.AZURE_ACI_CREDENTIALS }}
           tag: ServiceControl
       - name: Setup SQS environment variables
         if: matrix.test-category == 'SQS'
