--- a/src/ServiceControl.Monitoring/Dockerfile
+++ b/src/ServiceControl.Monitoring/Dockerfile
@@ -23,10 +23,11 @@ LABEL org.opencontainers.image.source=https://github.com/Particular/ServiceContr
 
 EXPOSE 33633
 
-COPY --from=build /deploy/Particular.ServiceControl.Monitoring ./app
+COPY --from=build /deploy/Particular.ServiceControl.Monitoring /app
 COPY --from=build /healthcheck /healthcheck
 
 HEALTHCHECK --start-period=10s CMD ["/healthcheck/healthcheck", "http://localhost:33633/connection"]
 
+WORKDIR /app
 USER $APP_UID
-ENTRYPOINT ["./app/ServiceControl.Monitoring"]
+ENTRYPOINT ["/app/ServiceControl.Monitoring"]
