--- a/src/ServiceControl.Monitoring/Dockerfile
+++ b/src/ServiceControl.Monitoring/Dockerfile
@@ -6,14 +6,12 @@ ENV CI=true
 
 COPY . .
 RUN dotnet build src/ServiceControl.Monitoring/ServiceControl.Monitoring.csproj --configuration Release -graph --property:TargetArch=$TARGETARCH
-
+RUN dotnet publish src/HealthCheckApp/HealthCheckApp.csproj --arch $TARGETARCH --output /healthcheck
 
 # Runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-noble-chiseled-composite
 ARG VERSION
-WORKDIR /
-
-RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
+WORKDIR /app
 
 LABEL org.opencontainers.image.source=https://github.com/Particular/ServiceControl \
       org.opencontainers.image.authors="Particular Software" \
@@ -25,10 +23,10 @@ LABEL org.opencontainers.image.source=https://github.com/Particular/ServiceContr
 
 EXPOSE 33633
 
-COPY --from=build /deploy/Particular.ServiceControl.Monitoring ./app
+COPY --from=build /deploy/Particular.ServiceControl.Monitoring /app
+COPY --from=build /healthcheck /healthcheck
 
-HEALTHCHECK --start-period=60s CMD wget --tries=1 --no-verbose -O/dev/null http://localhost:33633/connection || exit 1
-
+HEALTHCHECK --start-period=10s CMD ["/healthcheck/healthcheck", "http://localhost:33633/connection"]
 
 USER $APP_UID
-ENTRYPOINT ["./app/ServiceControl.Monitoring"]
+ENTRYPOINT ["/app/ServiceControl.Monitoring"]
