--- a/src/TestHelper/TestHelper.csproj
+++ b/src/TestHelper/TestHelper.csproj
@@ -6,6 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="NUnit" />
+    <PackageReference Include="NUnit.Analyzers" />
   </ItemGroup>
 
+  <!-- Workaround to prevent VS test discovery error -->
+  <ItemGroup>
+    <ProjectCapability Remove="TestContainer" />
+  </ItemGroup>
+  <!-- End Workaround -->
+  
 </Project>
